<?xml version="1.0" encoding="utf-8"?>
<menu
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/settings"
		app:showAsAction="always"
        />
    <item
        android:id="@+id/menu_help"
        android:icon="@android:drawable/ic_menu_help"
        android:title="@string/help"
        app:showAsAction="ifRoom"/>
	<item
		android:id="@+id/menu_contacts"
		android:icon="@android:drawable/ic_menu_view"
		android:title="@string/contacts"
		app:showAsAction="never"
		/>
	<item
		android:id="@+id/menu_exit"
		android:icon="@android:drawable/ic_menu_close_clear_cancel"
		android:title="@string/exit"
		app:showAsAction="never"
		/>
</menu>
