<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_gravity="top"
	android:orientation="vertical">

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:layout_marginTop="16dp"
		android:layout_marginBottom="20dp"
		android:text="@string/new_account"
		android:textAppearance="@style/TextAppearance.AppCompat.Display1"
		/>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="start"
		android:layout_marginLeft="16dp"
		android:layout_marginRight="16dp"
		android:text="@string/username"
		android:textAppearance="@style/TextAppearance.AppCompat.Large" />

	<EditText
		android:id="@+id/username"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="16dp"
		android:layout_marginRight="16dp"
		android:layout_marginBottom="16dp"
		android:hint="@string/enter_username"
		android:inputType="textPassword"
		android:maxLines="1"
		android:minHeight="48dp"
		android:textColorHint="#546E7A"
		android:autofillHints="username"/>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="start"
		android:layout_marginLeft="16dp"
		android:layout_marginRight="16dp"
		android:text="@string/password"
		android:textAppearance="@style/TextAppearance.AppCompat.Large" />

	<EditText
		android:id="@+id/password"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="16dp"
		android:layout_marginRight="16dp"
		android:layout_marginBottom="8dp"
		android:hint="@string/enter_password"
		android:inputType="textPassword"
		android:maxLines="1"
		android:minHeight="48dp"
		android:textColorHint="#546E7A"
		android:autofillHints="password"/>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="start"
		android:layout_marginLeft="16dp"
		android:layout_marginRight="16dp"
		android:labelFor="@+id/password_confirm"
		android:text="@string/confirm_password"
		android:textAppearance="@style/TextAppearance.AppCompat.Large" />

	<EditText
		android:id="@+id/password_confirm"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="16dp"
		android:layout_marginRight="16dp"
		android:layout_marginBottom="8dp"
		android:hint="@string/confirm_password"
		android:inputType="textPassword"
		android:maxLines="1"
		android:minHeight="48dp"
		android:textColorHint="#546E7A"
		android:autofillHints="password"/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="horizontal"
		android:layout_margin="16dp">

		<Button
			android:id="@+id/cancel_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="16dp"
			android:layout_marginTop="8dp"
			android:layout_marginRight="16dp"
			android:text="@string/clear" />

		<Button
			android:id="@+id/done_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="16dp"
			android:layout_marginTop="8dp"
			android:layout_marginRight="16dp"
			android:text="@string/create" />

		<Button
			android:id="@+id/exit_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="16dp"
			android:layout_marginTop="8dip"
			android:layout_marginRight="16dp"
			android:text="@string/exit" />

	</LinearLayout>
</LinearLayout>
