<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <ScrollView
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_gravity="center">
        <LinearLayout
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_gravity="top"
            android:layout_marginTop="8dp">

            <TextView
                android:id="@+id/permission_dialog_notice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/permission_notice"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"/>
            <Button
                android:id="@+id/buttonNewGame"
                android:text="@string/new_game"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"/>
            <Button
                android:id="@+id/buttonAudio"
                android:text="@string/audio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp" />
            <Button
                android:id="@+id/buttonVideo"
                android:text="@string/video"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginBottom="8dp" />
            <Button
                android:id="@+id/buttonImages"
                android:text="@string/images"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp" />
            <Button
                android:id="@+id/buttonMaps"
                android:text="@string/where_am_i"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp" />
            <Button
                android:id="@+id/buttonSettings"
                android:text="@string/settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp" />
            <Button
                android:id="@+id/buttonHelp"
                android:text="@string/help"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp" />
            <Button
                android:id="@+id/buttonSensors"
                android:text="@string/sensors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp" />
            <Button
                android:id="@+id/buttonExit"
                android:text="@string/exit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
