<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginTop="8dp">
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_margin="16dp">
		<Button
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:id="@+id/buttonAudioStart"
			android:text="@string/start_audio"
			android:layout_marginLeft="8dp"
			android:layout_marginRight="8dp"
			android:layout_marginBottom="8dp"
			/>
		<Button
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:text="@string/stop_audio"
			android:id="@+id/buttonAudioStop"
			android:layout_marginLeft="8dp"
			android:layout_marginRight="8dp"
			android:layout_marginBottom="8dp"
			/>
	</LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonAudioRecord"
        android:text="@string/record_audio"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"/>
</LinearLayout>
