<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

	<VideoView
		android:id="@+id/videoView"
		android:layout_width="match_parent"
		android:layout_height="175dip"
		android:layout_gravity="center"
		android:layout_marginLeft="8dp"
		android:layout_marginTop="8dp"
		android:layout_marginRight="8dp"
		android:layout_marginBottom="8dp" />

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="16dp"
		android:orientation="horizontal">

		<Button
			android:id="@+id/buttonVideoStart"
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:layout_marginLeft="8dp"
			android:layout_marginRight="8dp"
			android:layout_marginBottom="8dp"
			android:text="@string/start_video" />

		<Button
			android:id="@+id/buttonVideoStop"
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:layout_marginLeft="8dp"
			android:layout_marginRight="8dp"
			android:layout_marginBottom="8dp"
			android:text="@string/stop_video" />
	</LinearLayout>

	<Button
		android:id="@+id/buttonVideoRecord"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="16dp"
		android:layout_marginRight="16dp"
		android:layout_marginBottom="8dp"
		android:text="@string/record_video" />
</LinearLayout>
