<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:id="@+id/linearLayout2"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<ImageView
		android:id="@+id/imageView"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="8dp"
		android:layout_marginEnd="8dp"
		android:layout_marginBottom="8dp"
		android:contentDescription="@string/image"
		app:layout_constraintBottom_toTopOf="@+id/buttonImageShow"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<Button
		android:id="@+id/buttonImageShow"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:layout_marginTop="8dp"
		android:layout_marginEnd="8dp"
		android:layout_marginBottom="8dp"
		android:text="@string/show_image"
		app:layout_constraintBottom_toTopOf="@+id/buttonImageCapture"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/imageView" />

	<Button
		android:id="@+id/buttonImageCapture"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_margin="8dp"
		android:text="@string/take_picture"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintHorizontal_bias="1.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toStartOf="@id/buttonImageSelect"
		app:layout_constraintTop_toBottomOf="@+id/buttonImageShow"
		app:layout_constraintVertical_bias="1.0" />

	<Button
		android:id="@+id/buttonImageSelect"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_margin="8dp"
		android:text="@string/select_picture"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="1.0"
		app:layout_constraintStart_toEndOf="@+id/buttonImageCapture"
		app:layout_constraintTop_toBottomOf="@+id/buttonImageShow"
		app:layout_constraintVertical_bias="1.0" />

	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/guideline"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		app:layout_constraintGuide_begin="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
