<?xml version="1.0" encoding="utf-8"?>
<!-- Source: Mapbox, https://github.com/mapbox/mapbox-android-demo -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:mapbox="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

    <!-- Set the starting camera position and map style using xml-->
    <com.mapbox.mapboxsdk.maps.MapView
        android:id="@+id/map_view"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_margin="8dp"
        mapbox:mapbox_cameraTargetLat="40.0000"
        mapbox:mapbox_cameraTargetLng="-83.0145" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

			<EditText
				android:id="@+id/location"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="8dp"
				android:hint="@string/enter_address"
				android:inputType="text"
				android:minWidth="250dp"
				android:textColor="#FFFFFF"
				android:autofillHints="@string/enter_address" />

            <Button
                android:id="@+id/button_locate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/find"
                android:layout_margin="8dp"/>
        </LinearLayout>

        <Button
            android:id="@+id/button_findme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/findme"
            android:layout_margin="8dp"/>
    </LinearLayout>

</LinearLayout>
